# athira

./: .release.json  .releaserc.json  .releaserc.json.bak  CHANGELOG.md  Cargo.toml  flake.nix  hooks.yaml  hooks2.yaml  install.sh  pyproject.toml  readme.md  test1.sh  test2.sh
.direnv/: flake-profile-1-link  flake-profile-3-link
.github/: build.yml  copilot-instructions.md  prepare.yml  release
.github/workflows/: jos  maturin  old  old2  release.yml
.thira/: commit-msg  pre-commit
docs/: basic-usage.md  commit-guidelines.md  configuration.md  hook-management.md  installation.md  script-management.md
src/: config.rs  error.rs  git.rs  hooks.rs  lint.rs  main.rs  old  scripts.rs
tests/: common.rs  test_config.rs  test_git.rs  test_hooks.rs  test_lint.rs
