[package]
name = "athira"
version = "0.2.0"
edition = "2021"
description = "A command-line tool for automating development workflows"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/athira"
documentation = "https://github.com/yourusername/athira#readme"
homepage = "https://github.com/yourusername/athira"
keywords = ["cli", "automation", "workflow", "development"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/*",
    ".gitignore",
    ".thira/*",
    "packages/*",
    "hooks.yaml",
    "flake.nix",
    "flake.lock",
    ".direnv/*"
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
colored = "2.0"
dirs = "5.0"
regex = "1.9"
