[build-system]
requires = ["maturin>=1.8.6"]
build-backend = "maturin"

[project]
name = "athira"
description = "Athira CLI tool"
requires-python = ">=3.7"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
bindings = "bin"
strip = true
