# [build-system]
# requires = ["maturin>=1.8.6"]
# build-backend = "maturin"

# [project]
# name = "athira"
# description = "Athira CLI tool"
# requires-python = ">=3.7"
# dynamic = ["version"]
# classifiers = [
#     "Programming Language :: Rust",
#     "Programming Language :: Python :: Implementation :: CPython",
#     "Programming Language :: Python :: Implementation :: PyPy",
# ]

# [tool.maturin]
# bindings = "bin"
# strip = true

[build-system]
requires = ["maturin>=1.8.6"]
build-backend = "maturin"

[project]
name = "thira"
description = "a single binary Git hooks manager and commit message linter"
requires-python = ">=3.7"
dynamic = ["version"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["git", "hooks", "commit", "lint", "automation"]
readme = "readme.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance"
]

[project.urls]
Homepage = "https://github.com/yourusername/athira"
Documentation = "https://github.com/yourusername/athira#readme"
Repository = "https://github.com/yourusername/athira"
Changelog = "https://github.com/yourusername/athira/blob/main/CHANGELOG.md"

[tool.maturin]
bindings = "bin"
strip = true
